--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,3 +15,17 @@
     width: 100%;
   }
 }
+
+.form-group h4, #onboard_autocomplete {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+li.highlighted {
+  background: #ccc;
+}
+
+ul.options-list {
+  list-style: none;
+  text-align: left;
+}
