--- a/resources/assets/sass/client.scss
+++ b/resources/assets/sass/client.scss
@@ -69,3 +69,5 @@
 // Modules
 @import "/client/modules/_listproduct";
 @import "/client/modules/_product";
+@import "/client/modules/_relatedproducts";
+@import "/client/modules/_company";
