--- a/resources/assets/sass/client.scss
+++ b/resources/assets/sass/client.scss
@@ -77,6 +77,7 @@
 @import "/client/modules/_companyinventory";
 @import "/client/modules/_education";
 @import "/client/modules/_dispensaryindex";
+@import "/client/modules/_home";
 
 
 
