--- a/resources/assets/sass/client/layout/_header.scss
+++ b/resources/assets/sass/client/layout/_header.scss
@@ -206,10 +206,10 @@ header#client-header {
     }
 
     .mobile-nav {
+        display: none; 
         align-items: center;
         background: #fe4d82;
         bottom: 0;
-        display: flex;
         flex-direction: column;
         justify-content: center;
         left: 0;
@@ -217,6 +217,10 @@ header#client-header {
         right: 0;
         top: 0;
         z-index: 100;
+    }
+
+    .mobile-nav.active {
+        display: flex;
     }
 
     .mobile-nav a {
