--- a/resources/assets/sass/client/_junkdrawer.scss
+++ b/resources/assets/sass/client/_junkdrawer.scss
@@ -33,27 +33,11 @@ main {
     }
 }
 
-
-
 @media screen and (min-width: 60rem) {
-  button[type="submit"]:hover, .read-more:hover {
-    color: #fe4d82;
-  }
-
   button[type="submit"]:hover:after, .read-more:hover:after {
     width: 100%;
   }
 }
-
-
-
-
-
-
-
-
-
-
 
 .product-image {
     background-position: center;
@@ -101,11 +85,12 @@ h5 {
     margin: 1.5rem auto 0;
     padding: .75rem 1.5rem;
     text-decoration: none;
+    color: #fa3668;
 }
 
 @media screen and (min-width: 60rem) {
     a:hover .read-more {
-        color: #fe4d82;
+        color: #fa3668;
     }
 
     a:hover .read-more:after {
