--- a/resources/assets/sass/client/layout/_footer.scss
+++ b/resources/assets/sass/client/layout/_footer.scss
@@ -1,12 +1,83 @@
+section.partners {
+    max-width: 1400px;
+    margin: 0 auto;
+    > div {
+        width: 50%;
+        float: left;
+        background-size: cover;
+        padding: 60px;
+        position: relative;
+        a, h2 {
+            position: relative;
+            z-index: 2;
+        }
+        .btn {
+            min-width: 240px;
+        }
+        h2 {
+            color: white;
+        }
+        &:before {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0,0,0,0.7);
+                z-index: 1;
+            }
+    }
+}
+nav.footer-primary {
+    color: white;
+    max-width: 1400px;
+    margin: 0 auto;
+    font-size: 14px;
+    padding: 60px;
+    line-height: 2;
+    font-weight: 500;
+    ul {
+        float: left;
+        margin-right: 60px;
+        li:first-child {
+            font-size: 16px;
+            font-weight: bold;
+        }
+        &:last-of-type {
+            margin-left: 35px;
+            i {
+                font-size: 20px;
+                margin: 0 3px;
+            }
+            li {
+                display: inline-block;
+                &:first-child {
+                    display: block;
+                }
+            }
+        }
+    }
+    a {
+        color: white;
+        text-decoration: none;
+    }
+}
 .footer {
-    background: #f1f4f5;
-    color: #000;
+    color: rgba(275,275,275,0.5);
     padding: 3rem;
-
-
+    clear: both;
+    border-top: 1px solid rgba(275,275,275,0.2);
+    margin-top: 25px;
+    font-weight: 500;
     .row {
         justify-content: space-between;
         text-align: center;
+        max-width: 1400px;
+        margin: auto;
+        padding-left: 60px;
+        padding-right: 60px;
     }
 
     @media screen and (min-width: 60rem) {
@@ -36,7 +107,7 @@
     }
 
     .footer-nav a {
-        color: #000;
+        color: rgba(275,275,275,0.5);
         display: block;
         font-size: 1.4em;
         margin-bottom: 1.5rem;
@@ -45,7 +116,7 @@
 
     @media screen and (min-width: 60rem) {
         .footer-nav a {
-            border-right: 1px #000 solid;
+            border-right: 1px rgba(275,275,275,0.5) solid;
             margin-right: 3rem;
             padding-right: 3rem;
         }
@@ -57,7 +128,7 @@
 
     .copyright {
         flex: 1;
-        font-size: 1.0em;
+        font-size: 1.4em;
         line-height: 133%;
         padding: 3rem 0 1.5rem;
     }
@@ -69,7 +140,7 @@
     }
 
     .social-nav a {
-        color: #000;
+        color: #fff;
         display: inline-block;
         margin: 0 1.5rem;
         vertical-align: middle;
