--- a/resources/assets/sass/client/modules/_home.scss
+++ b/resources/assets/sass/client/modules/_home.scss
@@ -1,9 +1,242 @@
+.body__welcome {
+  .client-wrapper {
+    background: transparent;
+  }
+}
+
 .homepage-wrapper {
     .hero {
         overflow: hidden;
         min-height: 100vh;
         padding-bottom: 4rem;
         position: relative;
+        padding: 100px;
+        color: white;
+        text-align: center;
+        h1 {
+            color: white;
+        }
+        > i {
+            margin-top: 30px;
+            font-size: 62px;
+        }
+    }
+
+    .search {
+        border-radius: 100px;
+    }
+
+    img {
+        margin: 25px 15px;
+    }
+
+    img.feature-logo {
+        height: 38px;
+    }
+    
+
+    section.news {
+        background: #feffff;
+        padding-left: 4%;
+        text-align: center;
+        > .btn {
+            border-color: #fa3668;
+            color: #fa3668;
+            margin: 60px 0;
+        }
+        article {
+            color: white;
+            width: 28%;
+            margin: 0 2%;
+            float: left;
+            background-size: cover;
+            background-position: center center;
+            position: relative;
+            text-align: center;
+            padding: 80px 0;
+            border-radius: 10px;
+            overflow: hidden;
+            min-height: 403px;
+            h3,p,a {
+                position: relative;
+                z-index: 2;
+                margin: 0 8% 25px 8%;
+            }
+            p {
+                margin-left: auto;
+                margin-right: auto;
+                font-weight: 500;
+            }
+            a {
+                text-decoration: none;
+            }
+            .btn {
+                min-width: 140px;
+            }
+            &:before {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0,0,0,0.7);
+                z-index: 0;
+            }
+        }
+    }
+
+    section.about {
+        background: #f3f4f5;
+        color: black;
+        text-align: center;
+        img {
+            width: 50%;
+            float: left;
+            margin: 0;
+        }
+        p, h1 {
+            float: left;
+            text-align: left;
+            width: 38%;
+            margin-left: 6%;
+            margin-right: 6%;
+        }
+        .btn {
+            float: left;
+            margin-left: 6%;
+            border-color: #fa3668;
+            color: #fa3668;
+        }
+    }
+
+    section.education {
+        background: #feffff;
+        color: black;
+        padding: 60px;
+        text-align: center;
+        li {
+            list-style: none;
+            display: inline-block;
+            text-align: center;
+            margin: 0 25px;
+            width: 120px;
+            img {
+                display: block;
+                width: 90%;
+                margin: 15px auto;
+            }
+        }
+    }
+
+    section.featured-articles {
+        article {
+            width: 50%;
+            float: left;
+            background-size: cover;
+            padding: 80px;
+            color: white;
+            position: relative;
+            h2, button, h4 {
+                position: relative;
+                z-index: 2;
+            }
+            &:before {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                background: rgba(0,0,0,0.7);
+                z-index: 0;
+            }
+        }
+    }
+
+    .input-zip-code {
+        width: 90%;
+        margin: auto;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        position: relative;
+        border-radius: 100px;
+        overflow: hidden;
+        height: 50px;
+        border: solid 2px rgba(275,275,275,0.25);
+        button {
+            position: absolute;
+            right: 0;
+            top: 0;
+            margin: 0;
+            line-height: 40px;
+            font-size: 24px;
+            padding-top: 0;
+            padding-bottom: 0;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            &.filter {
+                background: transparent;
+                border: none;
+                border-left: #ccc 1px solid;
+                font-weight: bold;
+                font-size: 14px;
+                padding: 0 1.5rem;
+                right: 7rem;
+                line-height: 46px;
+                padding-left: 30px;
+                i {
+                    margin-left: 5px;
+                }
+                &:before {
+                    content: '';
+                    position: absolute;
+                    left: 10px;
+                    top: 18px;
+                    background: url('/images/redesign/icon-filters.svg');
+                    background-size: cover;
+                    width: 12px;
+                    height: 12px;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: 962px) {
+        .input-zip-code {
+            width: 60%;
+        }
+    }
+
+    .dropdown {
+        //display: none;
+        width: 500px;
+        color: #333;
+        position: absolute;
+        right: 26.1%;
+        top: 4.8rem;
+        text-align: center;
+        .column {
+            border-left: 1px solid #ccc;
+        }
+        ul {
+            //display: none;
+            background: white;
+            line-height: 50px;
+            text-align: left;
+            width: 110%;
+            li {
+                line-height: 1.2;
+            }
+        }
+        h4 {
+            margin: 0;
+            font-size: 14px;
+            text-transform: uppercase;
+            line-height: 28px;
+        }
     }
 
     .hero .slide-bg {
@@ -18,7 +251,7 @@
     }
 
     .hero .slide-bg:after {
-        background: rgba(255,255,255,0.3);
+        background: rgba(0,0,0,0.65);
         content: '';
         height: 100%;
         left: 0;
@@ -33,24 +266,28 @@
         }
     }
 
-    h2 {
-        color: #000;
-        font-family: 'Gotham-Bold', sans-serif;
-        font-size: 1.6rem;
-        letter-spacing: 0.05em;
+    h1 {
         line-height: 133%;
         margin: 0 auto 3rem;
         padding-top: 3rem;
         text-align: center;
-        text-transform: uppercase;
         width: 90%;
     }
 
+    p {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+    }
+
     @media screen and (min-width: 60rem) {
-        h2 {
-            font-size: 3.6rem;
+        h1 {
             padding-top: 4rem;
-            width: 60%;
+            width: 85%;
+        }
+        p {
+            width: 50%;
         }
     }
 
@@ -84,16 +321,10 @@
     h3 {
         align-items: center;
         display: flex;
-        font-size: 1.4rem;
         justify-content: center;
         text-align: center;
     }
 
-    @media screen and (min-width: 60rem) {
-        h3 {
-            font-size: 2.4rem;
-        }
-    }
 
     h3 hr {
         background: #000;
@@ -116,6 +347,7 @@
     .options {
         margin: .5rem 0 0;
         text-align: left;
+        position: relative;
     }
 
     @media screen and (min-width: 60rem) {
@@ -131,12 +363,13 @@
 
     .options .column {
         padding: .5rem;
-        width: 50%;
+        width: 33%;
+        float: left;
     }
 
     @media screen and (min-width: 60rem) {
         .options .column {
-            width: 25%;
+            width: 33%;
         }
     }
 
@@ -148,10 +381,6 @@
         .options .column:last-of-type {
             width: 50%;
         }
-    }
-
-    .options .column:last-of-type ul {
-        columns: 2;
     }
 
     h4 {
@@ -196,11 +425,6 @@
         margin-right: 0.75rem;
         vertical-align: middle;
         width: 1rem;
-    }
-
-    .input-zip-code {
-        margin: .75rem 0;
-        text-align: center;
     }
 
     input[type="number"] {
