--- a/resources/assets/sass/client/modules/_listproduct.scss
+++ b/resources/assets/sass/client/modules/_listproduct.scss
@@ -1,3 +1,8 @@
+body.body__products {
+  .client-wrapper {
+    padding: 80px 100px;
+  }
+}
 section#product-list {
   > span {
     align-items: stretch;
@@ -14,19 +19,22 @@ section#product-list {
   }
 
   .product {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 5rem;
-      padding: 0 1.5rem;
-      text-align: center;
-      width: calc(100% / 2);
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.12);
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    padding: 1.5rem;
+    text-align: center;
+    width: calc(86% / 2);
   }
 
   @media screen and (min-width: 60rem) {
       .product {
           padding: 0;
-          padding: 0 2.5rem;
-          width: calc(100% / 4);
+          padding: 2rem;
+          width: calc(86% / 4);
       }
   }
 
@@ -93,6 +101,9 @@ section#product-list {
       margin: 1.5rem auto 0;
       padding: .75rem 1.5rem;
       text-decoration: none;
+      border-radius: 100px;
+      background: transparent;
+      color: #fa3668;
   }
 
   @media screen and (min-width: 60rem) {
