--- a/resources/assets/sass/client/modules/_product.scss
+++ b/resources/assets/sass/client/modules/_product.scss
@@ -1,3 +1,9 @@
+body.body__product {
+  .client-wrapper {
+    padding: 20px 100px;
+    background: white;
+  }
+}
 .product-single {
   display: block;
   padding: 0 3rem;
@@ -56,7 +62,7 @@
 
   @media screen and (min-width: 60rem) {
       .images {
-          width: 25%;
+          width: 45%;
       }
   }
 
