--- a/resources/assets/sass/client/layout/_footer.scss
+++ b/resources/assets/sass/client/layout/_footer.scss
@@ -60,7 +60,7 @@ nav.footer-primary {
         }
     }
     a {
-        color: white;
+        color: white !important;
         text-decoration: none;
     }
 }
