--- a/resources/assets/sass/client/layout/_header.scss
+++ b/resources/assets/sass/client/layout/_header.scss
@@ -13,6 +13,24 @@ $wrapper-margin: 15%;
   margin: auto;
   box-shadow: 0 0 30px rgba(0,0,0,0.25);
   z-index: 999;
+  .selected-filters {
+    width: 48%;
+    float: left;
+    margin-top: 12px;
+    margin-left: 2%;
+    span {
+        display: inline-block;
+        color: #fa3668;
+        cursor: pointer;
+        padding: 0 8px;
+        line-height: 18px;
+        margin: 0 8px;
+        border: 1px #fa3668 solid;
+        font-size: 12px;
+        border-radius: 50px;
+        font-weight: 500;
+    }
+  }
   .category {
     display: none;
   }
@@ -26,6 +44,7 @@ $wrapper-margin: 15%;
     height: 50px;
     border: solid 1px #cbcccd;
     background: white;
+    float: left;
     input {
         border-radius: 100px;
         border: none;
