--- a/resources/assets/sass/client/modules/_home.scss
+++ b/resources/assets/sass/client/modules/_home.scss
@@ -156,86 +156,17 @@
         }
     }
 
-    .input-zip-code {
+    .options {
         width: 90%;
         margin: auto;
         margin-top: 60px;
         margin-bottom: 60px;
         position: relative;
-        border-radius: 100px;
-        overflow: hidden;
-        height: 50px;
-        border: solid 2px rgba(275,275,275,0.25);
-        button {
-            position: absolute;
-            right: 0;
-            top: 0;
-            margin: 0;
-            line-height: 40px;
-            font-size: 24px;
-            padding-top: 0;
-            padding-bottom: 0;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            &.filter {
-                background: transparent;
-                border: none;
-                border-left: #ccc 1px solid;
-                font-weight: bold;
-                font-size: 14px;
-                padding: 0 1.5rem;
-                right: 7rem;
-                line-height: 46px;
-                padding-left: 30px;
-                i {
-                    margin-left: 5px;
-                }
-                &:before {
-                    content: '';
-                    position: absolute;
-                    left: 10px;
-                    top: 18px;
-                    background: url('/images/redesign/icon-filters.svg');
-                    background-size: cover;
-                    width: 12px;
-                    height: 12px;
-                }
-            }
-        }
     }
 
     @media screen and (min-width: 962px) {
-        .input-zip-code {
+        .options {
             width: 60%;
-        }
-    }
-
-    .dropdown {
-        //display: none;
-        width: 500px;
-        color: #333;
-        position: absolute;
-        right: 26.1%;
-        top: 4.8rem;
-        text-align: center;
-        .column {
-            border-left: 1px solid #ccc;
-        }
-        ul {
-            //display: none;
-            background: white;
-            line-height: 50px;
-            text-align: left;
-            width: 110%;
-            li {
-                line-height: 1.2;
-            }
-        }
-        h4 {
-            margin: 0;
-            font-size: 14px;
-            text-transform: uppercase;
-            line-height: 28px;
         }
     }
 
@@ -345,14 +276,11 @@
     }
 
     .options {
-        margin: .5rem 0 0;
         text-align: left;
-        position: relative;
     }
 
     @media screen and (min-width: 60rem) {
         .options {
-            margin: 1.5rem 0 0;
         }
     }
 
