--- a/resources/assets/sass/modules/_autocomplete.scss
+++ b/resources/assets/sass/modules/_autocomplete.scss
@@ -1,3 +1,74 @@
+#onboard_autocomplete {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+
+  .input-lg {
+    margin-bottom: 0;
+  }
+
+  .autocomplete-input {
+    width: 100%;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  li {
+    display: inline-block;
+    margin: 0 10px;
+    p {
+      margin-top: 15px;
+    }
+  }
+
+  input {
+    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  }
+
+  .autocomplete-input {
+    position: relative;
+  }
+
+  ul.options-list {
+    display: flex;
+    flex-direction: column;
+    margin-top: -12px;
+    border: 1px solid #dbdbdb;
+    border-radius: 0 0 3px 3px;
+    position: absolute;
+    width: 25%;
+    overflow: hidden;
+    z-index: 888;
+  }
+
+  ul.options-list li {
+    width: 100%;
+    flex-wrap: wrap;
+    background: white;
+    margin: 0;
+    border-bottom: 1px solid #eee;
+    color: #363636;
+    padding: 7px;
+    cursor: pointer;
+  }
+
+  ul.options-list li.highlighted {
+    background: #f8f8f8
+  }
+}
+
 #autocomplete {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
