--- a/resources/assets/sass/client/layout/_header.scss
+++ b/resources/assets/sass/client/layout/_header.scss
@@ -95,7 +95,7 @@ header#client-header {
   padding-right: 80px;
     margin: auto;
     position: fixed;
-    background: #000920;
+    background: black;
     right: 0;
     left: 0;
     top: 0;
