--- a/resources/assets/sass/modules/_panel.scss
+++ b/resources/assets/sass/modules/_panel.scss
@@ -1,7 +1,7 @@
 .panel-wrapper {
   display: flex;
   margin: 30px auto;
-  margin-left: -2%;
+  margin-left: -1%;
   line-height: 1.5;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -16,6 +16,10 @@
       }
     }
   }
+  form {
+    width:100%;
+    max-width: none !important;
+  }
   .panel {
     max-width: 48%;
     background: white;
@@ -23,8 +27,8 @@
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     padding: 25px;
     font-size: 16px;
-    margin: 2%;
-    flex-basis: 20%;
+    margin: 1%;
+    flex-basis: 30%;
     img {
       max-width: 100%;
     }
