safari font patch

--- a/resources/assets/sass/client/global/_typography.scss
+++ b/resources/assets/sass/client/global/_typography.scss
@@ -30,6 +30,8 @@ body {
 
 h1, h2, h3 {   
     font-family: 'Playfair Display', serif;
+    font-weight:900; 
+    font-style:italic;
     line-height: 1.2;
 }
 
