--- a/resources/assets/sass/client/global/_typography.scss
+++ b/resources/assets/sass/client/global/_typography.scss
@@ -63,6 +63,10 @@ h3.section-heading {
   margin-bottom: 15px;
 }
 
+h4 small {
+  font-size: 12px;
+}
+
 p {
   font-size: 14px;
   line-height: 1.4;
