--- a/resources/assets/sass/modules/_modal.scss
+++ b/resources/assets/sass/modules/_modal.scss
@@ -16,16 +16,40 @@
     top: 25px;
     cursor: pointer;
   }
-  h2 {
+  h3 {
     text-align: center;
+  }
+  a {
+    text-decoration: underline !important;
+  }
+  a.add_product_trigger {
+    font-size: 14px;
+  }
+  button {
+    margin-bottom: 25px;
   }
   .modal-wrap {
     background: white;
     position: relative;
     z-index: 9999;
     width: 48%;
-    margin: 5vw auto 0 auto;
+    margin: 4vw auto 0 auto;
     padding: 30px;
     border-radius: 10px;
+    max-height: 80%;
+    overflow-y: auto;
+  }
+  .filters {
+    h3 {
+      margin-bottom: 15px;
+    }
+    .filter {
+      float: left;
+      width: 33.3%;
+      margin: 5px 0;
+      label {
+        display: inline !important;
+      }
+    }
   }
 }
