--- a/resources/assets/sass/modules/_autocomplete.scss
+++ b/resources/assets/sass/modules/_autocomplete.scss
@@ -70,7 +70,7 @@
   }
 }
 
-#autocomplete {
+#autocomplete, #company_autocomplete {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
