--- a/resources/assets/sass/client/modules/_home.scss
+++ b/resources/assets/sass/client/modules/_home.scss
@@ -138,7 +138,7 @@
             padding: 80px;
             color: white;
             position: relative;
-            h2, button, h4 {
+            h2, a.btn, h4 {
                 position: relative;
                 z-index: 2;
             }
