--- a/resources/assets/sass/client/global/_typography.scss
+++ b/resources/assets/sass/client/global/_typography.scss
@@ -76,6 +76,13 @@ p {
   margin-bottom: 40px;
 }
 
+.help-block {
+  color: red;
+  display: block;
+  margin-top: 10px;
+  font-size: 12px;
+}
+
 .breadcrumbs {
   li {
     display: inline-block;
