--- a/resources/assets/sass/modules/_modal.scss
+++ b/resources/assets/sass/modules/_modal.scss
@@ -8,6 +8,9 @@
   right: 0; 
   background: rgba(0,0,0,0.85);
   z-index: 9999;
+  &.errors {
+    display: block;
+  }
   #cancel {
     font-size: 26px;
     color: rgba(0,0,0,0.25);
